[package]
name = "synclink"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
uuid = { version = "1.6.0", features = ["v4", "serde"] }
sha2 = "0.10.6"
toml = "0.8.8"
futures = "0.3.29"
axum = { version = "0.7.5", features = ["default", "multipart", "macros", "ws"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "chrono", "json"] }
tracing-error = "0.2.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "1.0.50"
infer = { version = "0.16.0", default-features = false }
image = "0.24.7"
simdutf8 = "0.1.4"
tar = "0.4.41"
pin-project-lite = "0.2.14"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
