[package]
name = "ephemera"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.34"
uuid = { version = "1.6.0", features = ["v4", "v7", "serde"] }
ulid = "1.2.1"
sha2 = "0.10.6"
toml = "0.8.8"
futures = "0.3.29"
axum = { version = "0.8.1", features = ["default", "multipart", "macros", "ws"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false }
tracing-error = "0.2.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "2.0.12"
infer = { version = "0.19.0", default-features = false }
simdutf8 = "0.1.4"
tar = "0.4.41"
pin-project-lite = "0.2.14"
rand = "0.9.0"
jsonwebtoken = "9.3.0"
image = { version = "0.25.6", features = ["default", "avif-native"], optional = true }
libvips = { git = "https://github.com/tonitrnel/libvips-rust-bindings", rev = "c411ef3eab8ed078f8bf03e1f542fbc4e4cb9c2a", optional = true }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
dashmap = "6.1.0"
base64 = "0.22.1"
colored = "3.0.0"

[features]
default = ['image-rs']
image-libvips = ["libvips"]
image-rs = ["image"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1" }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
#debug = true