[package]
name = "tar-binding"
version = "0.1.0"
edition = "2021"
description = "Rust tar WASM binding"
repository = "https://github.com/tonitrnel/ephemera"

[dependencies]
wasm-bindgen = "0.2.92"
tar = "0.4.41"
web-sys = { version = "0.3.69", features = ["console"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"

[lib]
crate-type = ["cdylib"]